[project]
name = "langgraphexploration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=4.0.0",
    "ddg>=0.2.2",
    "dotenv>=0.9.9",
    "langchain>=1.3.12",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.8",
    "wikipedia>=1.4.0",
]
